--- a/src/components/bars/bars.styl
+++ b/src/components/bars/bars.styl
@@ -51,9 +51,9 @@
     height: 100%
     background-position: center center
     &.static
-      background-image: url('/ssky_static.png')
+      background-image: url('ssky_static.png')
     &.animated
-      background-image: url('/ssky_animated.gif')
+      background-image: url('ssky_animated.gif')
 
 .buttons
   display: grid
@@ -141,7 +141,7 @@ button.play
       width: 64px
       height: 40px
       opacity: 0
-      transition: opacity .15s ease
+      transition: opacity .1s ease
       &:not(:first-child)
         margin-bottom: 1em
       &[index='0']
