--- a/src/components/bars/bars.styl
+++ b/src/components/bars/bars.styl
@@ -1,4 +1,7 @@
 :host
+  position: fixed
+  width: 100%
+  height: 100%
   display: grid
   grid-auto-rows: min-content
   grid-template-rows: min-content auto
@@ -6,7 +9,6 @@
   align-items: center
   position: relative
   background: #210741
-  height: 100vh
   box-sizing: border-box
   padding: 1em 1em 0 1em
   background-image: url('bg_grid_static.png')
