--- a/src/components/frequencies/frequencies.styl
+++ b/src/components/frequencies/frequencies.styl
@@ -84,11 +84,11 @@ button.play
   &:focus
     outline: none
 
-:host:not([data-state='paused'])
+:host:not([state='paused'])
   i.play
     display: none
 
-:host([data-state='playing'])
+:host([state='playing'])
   button.play
     background: var(--playing-bg)
     color: var(--playing-color)
@@ -101,7 +101,7 @@ button.play
     .image.animated
       filter: drop-shadow(0px 0px 30px rgba(213, 56, 156, .5))
 
-:host([data-state="unstarted"])
+:host([state="unstarted"])
   button.play
     background: var(--unstarted-bg)
     color: var(--unstarted-color)
@@ -109,7 +109,7 @@ button.play
   i.pause
     display: none
 
-:host([data-state='paused'])
+:host([state='paused'])
   button.play
     background: var(--paused-bg)
     color: var(--paused-color)
@@ -117,8 +117,8 @@ button.play
   i.pause
     display: none
 
-:host([data-state="unstarted"]),
-:host([data-state="paused"])
+:host([state="unstarted"]),
+:host([state="paused"])
   .ssky img.animated
     display: none
   .ssky img.static
