--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -7,7 +7,7 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
     title= config.title
     style.
-      @import url('https://fonts.googleapis.com/css?family=Oxanium|Russo+One&display=swap');
+      @import url('https://fonts.googleapis.com/css?family=Comfortaa|Oxanium|Russo+One&display=swap');
       @font-face {
         font-family: 'Material Icons';
         src: url('https://fonts.gstatic.com/s/materialicons/v50/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2') format('woff2');
