--- a/src/components/frequencies/frequencies.styl
+++ b/src/components/frequencies/frequencies.styl
@@ -177,7 +177,7 @@ button.play
     grid-gap: .25em
   a,
   a:visited
-    font-family: 'Oxanium'
+    font-family: 'Comfortaa'
     font-size: .7em
     text-decoration: none
     span
