--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -53,8 +53,7 @@ html(lang='en')
       }
   body
     main
-      ss-frequencies(
-        state='unstarted',
+      ss-frequencies-css(
         url='wraith_of_red_hill.mp3',
       )
     script(src='application.js')
