--- a/src/components/frequencies-css/frequencies-css.pug
+++ b/src/components/frequencies-css/frequencies-css.pug
@@ -1,9 +1,21 @@
-style= require('./frequencies.styl')
+style= require('./frequencies-css.styl')
+
+.ssky
+  .image.animated
+  .image.static
+
+.sun
 
 .buttons
   button.play((click)=this.audioService.togglePlay())
     i.material-icons.play play_arrow
     i.material-icons.pause pause
+
+.bars
+  each bar, index in [0,1,2,3,4,5,6,7]
+    .bar(index=index)
+      each block in [0,1,2,3,4,5,6,7]
+        span(index=block)
 
 .creds
   a(href="http://www.instagram.com/dotdotdotpix", target="_blank")
