--- a/src/components/frequencies-css/frequencies-css.styl
+++ b/src/components/frequencies-css/frequencies-css.styl
@@ -31,6 +31,36 @@
   0%
     box-shadow: 0 0 0 0 var(--pulse-color)
 
+.sun
+  width: 100%
+  height: 100%
+  position: absolute
+  background: url(bg_sun_static.png)
+  background-repeat: no-repeat
+  background-position: center top
+  z-index: 1
+
+.ssky
+  width: 100%
+  height: 100%
+  position: absolute
+  z-index: 1
+  display: flex
+  align-items: center
+  justify-content: center
+  z-index: 3
+  .image
+    position: absolute
+    transition: filter .15s ease-in-out
+    background-repeat: no-repeat
+    width: 100%
+    height: 100%
+    background-position: center center
+    &.static
+      background-image: url('ssky_static.png')
+    &.animated
+      background-image: url('ssky_animated.gif')
+
 .buttons
   display: grid
   grid-auto-flow: column
@@ -71,12 +101,60 @@ button.play
     background: var(--playing-bg)
     color: var(--playing-color)
     --pulse-color: var(--playing-bg)
+  .ssky
+    .image.static
+      opacity: 0
+    .image.animated
+      filter: drop-shadow(0px 0px 30px rgba(213, 56, 156, .5))
 
 :host([state='paused'])
   button.play
     background: var(--paused-bg)
     color: var(--paused-color)
     --pulse-color: var(--paused-bg)
+  .ssky img.animated
+    display: none
+  .ssky img.static
+    display: block
+  .bars .bar span
+    opacity: 0 !important
+
+.bars
+  display: grid
+  grid-auto-flow: column
+  grid-gap: 1em
+  align-items: end
+  height: 100%
+  padding: 1em 0 0
+  box-sizing: border-box
+  z-index: 2
+  .bar
+    display: flex
+    flex-direction: column-reverse
+    align-items: center
+    span
+      width: 64px
+      height: 40px
+      opacity: 0
+      transition: opacity .1s ease
+      &:not(:first-child)
+        margin-bottom: 1em
+      &[index='0']
+        background: var(--bar-block-0)
+      &[index='1']
+        background: var(--bar-block-1)
+      &[index='2']
+        background: var(--bar-block-2)
+      &[index='3']
+        background: var(--bar-block-3)
+      &[index='4']
+        background: var(--bar-block-4)
+      &[index='5']
+        background: var(--bar-block-5)
+      &[index='6']
+        background: var(--bar-block-6)
+      &[index='7']
+        background: var(--bar-block-7)
 
 .creds
   position: absolute
@@ -105,7 +183,14 @@ button.play
       color: rgba(7, 187, 242, 1)
 
 @media (max-width: 640px)
+  .bars .bar span
+    width: 28px
+    height: 17px
   .creds
     padding: .25em
     a
       font-size: .7em
+  .ssky .image
+    background-size: 65%
+  .sun
+    background-size: auto 45%
