--- a/src/components/frequencies/frequencies.pug
+++ b/src/components/frequencies/frequencies.pug
@@ -5,6 +5,10 @@ style= require('./frequencies.styl')
     i.material-icons.play play_arrow
     i.material-icons.pause pause
 
+ss-pixi(
+  colors=window.JSON.stringify(this.colors)
+)
+
 .creds
   a(href="http://www.instagram.com/dotdotdotpix", target="_blank")
     span Animation by
